--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ pm",
 		"create-local": "graph create --node http://localhost:8020/ pm",
 		"remove-local": "graph remove --node http://localhost:8020/ pm",
-		"deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 pm"
+		"deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 pm",
+		"deploy-hosted": "graph auth --product hosted-service $ACCESS_TOKEN && graph deploy --product hosted-service janmajayamall/meme-curator-subgraphs"
 	},
 	"dependencies": {
 		"@graphprotocol/graph-cli": "0.22.4",
