--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -24,6 +24,28 @@ dataSources:
               - event: MarketCreated(indexed address)
                 handler: handleMarketCreated
           file: ./src/mappings/factory.ts
+    - kind: ethereum/contract
+      name: OracleFactory
+      network: arbitrum-rinkeby
+      source:
+          address: "0x38CEbFf6520aB9A3238809c53b12a3668e5F4779"
+          abi: OracleFactory
+          startBlock: 6454308
+      mapping:
+          kind: ethereum/events
+          apiVersion: 0.0.5
+          language: wasm/assemblyscript
+          entities:
+              - OracleFactory
+          abis:
+              - name: OracleFactory
+                file: ./abis/OracleFactory.json
+              - name: Oracle
+                file: ./abis/Oracle.json
+          eventHandlers:
+              - event: OracleRegistered(indexed address)
+                handler: handleOracleRegistered
+          file: ./src/mappings/oracleFactory.ts
 templates:
     - name: Market
       kind: ethereum/contract
