--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,9 +6,9 @@ dataSources:
       name: OracleFactory
       network: arbitrum-rinkeby
       source:
-          address: "0x01bE36d951B548E1074d15F3144291b0f8C6B3A0"
+          address: "0xa7db16a8b638607272eAdc1868A8fB28636e1Db2"
           abi: OracleFactory
-          startBlock: 6528933
+          startBlock: 6765743
       mapping:
           kind: ethereum/events
           apiVersion: 0.0.5
@@ -23,7 +23,7 @@ dataSources:
           eventHandlers:
               - event: OracleCreated(indexed address)
                 handler: handleOracleCreated
-          file: ./src/mappings/factory.ts
+          file: ./src/mappings/oracleFactory.ts
 templates:
     - name: OracleMarkets
       kind: ethereum/contract
