--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@graphprotocol/graph-cli": "0.22.4",
-		"@graphprotocol/graph-ts": "0.22.1"
+		"@graphprotocol/graph-ts": "0.22.1",
+		"source-map-support": "^0.5.21"
 	}
 }
