--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -60,3 +60,7 @@ templates:
                 handler: handleOracleConfigUpdated
               - event: DelegateChanged(indexed address)
                 handler: handleDelegateChanged
+              - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
+                handler: handleTransferSingle
+              - event: TransferBatch(indexed address,indexed address,indexed address,uint256[],uint256[])
+                handler: handleTransferBatch
