added support for diff

--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
 		"create-local": "graph create --node http://localhost:8020/ pm",
 		"remove-local": "graph remove --node http://localhost:8020/ pm",
 		"deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 pm",
-		"deploy-hosted": "graph auth --product hosted-service $ACCESS_TOKEN && graph deploy --product hosted-service janmajayamall/meme-curator-subgraphs"
+		"deploy-hosted-prod": "npm run prepare:prod && graph auth --product hosted-service $ACCESS_TOKEN && graph deploy --product hosted-service janmajayamall/meme-curator-subgraphs",
+		"deploy-hosted-test": "npm run prepare:test && graph auth --product hosted-service $ACCESS_TOKEN && graph deploy --product hosted-service janmajayamall/pm-content-test",
+		"prepare:prod": "mustache config/arbitrum-rinkeby-prod.json subgraph.template.yaml > subgraph.yaml",
+		"prepare:test": "mustache config/arbitrum-rinkeby-test.json subgraph.template.yaml > subgraph.yaml"
 	},
 	"dependencies": {
 		"@graphprotocol/graph-cli": "0.22.4",
 		"@graphprotocol/graph-ts": "0.22.1",
 		"source-map-support": "^0.5.21"
+	},
+	"devDependencies": {
+		"mustache": "^4.2.0"
 	}
 }
